--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coiso",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@wppconnect-team/wppconnect": "^1.30.3"
+  }
 }
