--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "coiso",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "type": "module",
+  "type":"commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "description": "",
   "dependencies": {
     "@wppconnect-team/wppconnect": "^1.30.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
