--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coiso",
   "version": "1.0.0",
   "main": "src/index.ts",
-  "type":"commonjs",
+  "type": "commonjs",
   "scripts": {
     "start": "node src/index.js",
     "build": "tsc"
@@ -12,9 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@wppconnect-team/wppconnect": "^1.30.3"
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@wppconnect-team/wppconnect": "^1.30.3",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "typescript": "^4.9.5"
   }
 }
