--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "tsc && node src/index.js",
     "build": "tsc"
   },
   "keywords": [],
