--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@wppconnect-team/wppconnect": "^1.30.3",
     "ffmpeg": "^0.0.4",
-    "fluent-ffmpeg": "^2.1.3"
+    "fluent-ffmpeg": "^2.1.3",
+    "sharp": "^0.33.4",
+    "wa-leal-stickers": "^1.0.8"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
