--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@wppconnect-team/wppconnect": "^1.30.3",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
+    "node-webpmux": "^3.2.0",
     "sharp": "^0.33.4",
-    "wa-leal-stickers": "^1.0.8"
+    "wa-leal-stickers": "^1.0.8",
+    "wa-sticker-formatter": "^4.4.4"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
